hphp/test/zend/good/bug43183.php
<?php
namespace Test;
use Test\Foo;
class Foo {}
class Bar {}
use Test\Bar;
echo "ok\n";