hphp/test/zend/bad/errmsg_039.php
<?php

class test {
	var $var;
	var $var;
}

echo "Done\n";
?>